# advent_of_code

./: CMakeLists.txt  README.md  main.cpp
.github/actions/: setup-ninja
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  aoc_config.h.in  main.cpp  module.hpp
src/intcode/: CMakeLists.txt  intcode.cpp  intcode.hpp
src/io/: CMakeLists.txt  io.cpp  io.hpp
src/module/: CMakeLists.txt  module.cpp  module.hpp
test/: CMakeLists.txt  test_module.cpp
test/intcode/: CMakeLists.txt  test_intcode.cpp
test/module/: test_module.cpp
